k8s/public-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-nginx
  namespace: cse644
  labels:
    app: public-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-nginx
  template:
    metadata:
      labels:
        app: public-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.5-alpine
          ports:
            - containerPort: 80
