k8s/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: cse644
spec:
  type: NodePort
  selector:
    app: haproxy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30081
