k8s/nginx-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx-loadbalancer
  namespace: cse644
spec:
  type: LoadBalancer
  selector:
    app: custom-nginx
  ports:
    - name: http
      port: 8082
      targetPort: 80
