k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx
  namespace: cse644
  labels:
    app: custom-nginx
spec:
  type: ClusterIP
  selector:
    app: custom-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
