k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-nginx-ingress
  namespace: cse644
spec:
  ingressClassName: nginx
  rules:
    - host: cse644.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: custom-nginx
                port:
                  number: 80
